<?xml version="1.0"?>
<package format="2">
  <name>pamuk</name>
  <version>0.0.0</version>
  <description>The pamuk package</description>

  <maintainer email="woeber@todo.todo">woeber</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>Eigen3</depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
